--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="demo_title">Google Maps API Demos</string>
     <string name="no_demos">No demos</string>
     <string name="app_name">Basic Maps App</string>
-    <string name="title_activity_maps">CameraDemoActivity</string>
+    <string name="title_activity_maps">MainActivityMaps</string>
     <string name="play_services_not_installed">Google Play services is not installed on this device.</string>
 
     <string name="alpha">Alpha</string>
